一些小的性能改进，使用java的整数cache